test(price): 최저가 추가의 경우 E2E 테스트 추가